scrollbar fix

--- a/styles/standard/style.css
+++ b/styles/standard/style.css
@@ -4,6 +4,7 @@ body {
 	font-size: 13px;
 	margin: 0;
 	padding: 0;
+	overflow-x: scroll;
 }
 
 a {
@@ -15,7 +16,7 @@ a {
 		text-decoration: underline;
 		color: #5b5b5b;
 	}
-	
+
 h1, h2 {
 	font-weight: 300;
 }
@@ -47,7 +48,7 @@ h2.title, h3.title {
 	h2.title {
 		font-size: 18px;
 	}
-	
+
 /* transitions */
 a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hover {
 	-webkit-transition: all 0.2s ease-in-out;
@@ -130,12 +131,12 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 		padding-top: 20px;
 		padding-bottom: 20px;
 	}
-				
+
 		header .logo {
 			color: #9b9b9b;
 			margin-bottom: 20px;
 		}
-		
+
 			.logo h2 {
 				font-weight: 500;
 				color: #272727;
@@ -166,7 +167,7 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 		border-left: 1px solid #3e5362;
 		border-right: 1px solid #3e5362;
 	}
-	
+
 		nav ul {
 			list-style-type: none;
 			padding: 0;
@@ -174,7 +175,7 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 			margin-left: -1px;
 			margin-right: -1px;
 		}
-		
+
 			nav ul li a {
 				padding-left: 20px;
 				padding-right: 20px;
@@ -187,7 +188,7 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 				border-left: 1px solid #2e3c40;
 				border-right: 1px solid #5b6d7a;
 			}
-			
+
 			nav ul li a:hover {
 				color: #3c586b;
 				text-decoration: none;
@@ -195,12 +196,12 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 				color: #fff;
 				background: rgba(255, 255, 255, 0.05);
 			}
-			
+
 			nav ul li a:active, nav ul li a.active.special {
 				color: #fff;
 				background: rgba(0, 0, 0, 0.5);
 			}
-			
+
 			nav ul li a.active {
 				font-weight: bold;
 				color: #3e5362;
@@ -232,7 +233,7 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 					width: 2px;
 					padding: 0;
 				}
-			
+
 	#content {
 		padding: 0px;
 		padding-top: 20px;
@@ -241,7 +242,7 @@ a, a:hover, input, input:hover, input:focus, input:active, .tdMore, .tdMore:hove
 		margin: auto;
 		margin-top: 20px;
 	}
-	
+
 footer {
 	text-align: center;
 	color: #9b9b9b;
@@ -252,7 +253,7 @@ footer {
 	background: #f6f6f6;
 	padding: 20px;
 }
-	
+
 /* TABLE specials */
 .inhalt {
 	padding: 10px;
@@ -291,17 +292,17 @@ footer {
 .item:hover {
 	background: #fcfcfc;
 }
-	
+
 	.tdMore {
 		text-align: center;
 		background: url(../../images/icons/arrow_right.png) center no-repeat;
 		cursor: pointer;
 	}
-	
+
 	.tdMore:hover {
 		background: url(../../images/icons/arrow_right_hover.png) center no-repeat;
 	}
-				
+
 /* special */
 .clear { clear: both; }
 
@@ -342,12 +343,12 @@ a.admin, a.admin:hover { color: #26677f; font-weight: bold; }
 		padding: 0;
 		color: #a0a0a0;
 	}
-	
+
 	.h2box span {
 		margin-top: 5px;
 		color: #9b9b9b;
 	}
-	
+
 .grey {
 	color: #9b9b9b;
 }
@@ -405,7 +406,7 @@ a.admin, a.admin:hover { color: #26677f; font-weight: bold; }
 
 /* images */
 .img {
-	
+
 }
 
 .img:hover {
@@ -448,7 +449,7 @@ input[type=submit], a.button {
 
 		background: #ba304e;
 	}
-	
+
 	input[type=submit]:active, a.button:active {
 		background: #3e5362;
 		box-shadow: inset 0px 2px 5px rgba(0, 0, 0, 0.15), 0px 1px 0px #fff;
@@ -603,7 +604,7 @@ table:not(.bb) {
 	table:not(.bb) td {
 		padding: 10px;
 	}
-	
+
 	table:not(.bb) th {
 		border-bottom: 1px solid #e0e0e0;
 		text-align: left;
@@ -619,7 +620,7 @@ td.title, th {
 	color: #778f9c;
 }
 
-td.side { 
+td.side {
 	padding: 20px;
 }
 
@@ -766,13 +767,13 @@ ul.sidebarNav {
 		padding-right: 7px;
 		border-bottom: 1px solid #e0e0e0;
 	}
-	
+
 		ul.sidebarNav li a:hover {
 			background: #fff;
 			color: #000;
 			text-decoration: none;
 		}
-		
+
 		ul.sidebarNav li a.active {
 			background: #fafafa;
 			color: #9b9b9b;
@@ -882,7 +883,7 @@ ul.sidebarNav {
 					margin-bottom: -1px;
 				}
 
-				
+
 
 	.tabs .content {
 		/* border: 1px solid #e0e0e0;
@@ -982,7 +983,7 @@ ul.sidebarNav {
 		}
 
 			#posts .post .user {
-				
+
 			}
 
 	#posts .firstPost {
